--- a/регистрация.html
+++ b/регистрация.html
@@ -53,8 +53,9 @@
                     <a class="nav-link link text-white display-7" href="home.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Главная</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Продукция</a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="CellElixir.html">Cell-Элликсиры</a><a class="text-white dropdown-item display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="text-white dropdown-item display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="text-white dropdown-item display-7" href="Производство.html" aria-expanded="false">Производство и технологии</a><a class="text-white dropdown-item display-7" href="отзывы.html" aria-expanded="false">Отзывы о продукции&nbsp;</a></div></li>
+                </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="true">
+                        Продукция</a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="CellElixir.html">Cell-Элликсиры</a><a class="text-white dropdown-item display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="text-white dropdown-item display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="text-white dropdown-item display-7" href="отзывы.html" aria-expanded="false">Отзывы о продукции&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="Производство.html" aria-expanded="false">
+                        Производство<br>и технологии</a></li>
                 <li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-7" href="https://office.agenyz.com/data/files/upload/24423/1902211833hfyK5vLYf9.pdf" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false">Маркетинг-план<br></a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="https://office.agenyz.com/data/files/upload/24423/1902211834EUc74ZTL3r.pdf" target="_blank">Подробное описание Маркетинг плана</a><a class="text-white dropdown-item display-7" href="https://office.agenyz.com/data/files/upload/24423/1902211833hfyK5vLYf9.pdf" target="_blank" aria-expanded="false">Маркетинг план с примерами</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="О деньгах.html" aria-expanded="false">О деньгах&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="https://office.agenyz.com/?bonus=007-432703" target="_blank" aria-expanded="false">Стать партнером &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
             
         </div>
@@ -62,7 +63,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
