--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -258,7 +258,7 @@
             <div class="event-name align-left mbr-white ">
                 <h4 class="mbr-fonts-style display-5">Осталось до конца выгодного месяца регистрации</h4>
             </div>
-            <div class="countdown align-center py-2" data-due-date="2019/05/31">
+            <div class="countdown align-center py-2" data-due-date="2019/06/30">
             </div>
             <div class="daysCountdown" title="Days"></div>
             <div class="hoursCountdown" title="Hours"></div>
