--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
 
     
 
@@ -178,10 +178,27 @@
                         <p class="mbr-text mbr-fonts-style align-left display-7"><strong>Состав набора MBM SET "True Aqua":</strong>
 <br> 
 <br>Бутылка AGenYZ
-<br>Умный Трекер AGenYZ
-<br>pH Баланс Селл (5 шт)
+<strong>(в подарок)</strong><br>Умный Трекер AGenYZ
+<strong>(в подарок)</strong><br>pH Баланс Селл (5 шт)
 <br>СорбиоДетокс Селл (5шт)
-<br>Иммун Селл (5шт)</p>
+<br>Иммун Селл (5шт)<br><br><strong>Стоимость набора 27 500 руб</strong>.<br><br><br><strong><em>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Умный Трекер AGenYZ </em></strong><br>Это эксклюзив во всех смыслах слова. 🔥
+<br>AGenYZ расширяет линейку брендированных товаров — теперь доступен умный трекер. Приобрести его можно только в составе сета. Более того: во всём мире его сейчас можно получить ТОЛЬКО у нас. Это разработка российской компании, которая прошла строжайший отбор главного критика и испытателя трекеров — Олега Андрийчука. 
+<br>
+<br>Сооснователь компании лично протестировал больше десятка трекеров, прочёл неохватное количество информации, чтобы найти тот самый. От аналогов умный трекер AGenYZ отличается широким спектром функций! 
+<br>Вас ждёт:
+<br>— высокая точность и постоянный замер пульса,
+<br>— баланс воды и дневник питания, давления,
+<br>— фазы сна и умный будильник,
+<br>— USB прямо в трекере — нет проводов,
+<br>— статистика своя и друзей в Web-версии,
+<br>— удаленный мониторинг и командные соревнования,
+<br>— детализация до 2 минут,
+<br>— добавление новых приборов и датчиков в экосистему (Весы, Тонометр, Глюкометр, Термометр),
+<br>— техподдержка и регулярно обновляемое ПО на русском языке.
+<br>
+<br>Вам не надо будет разбираться с инструкцией на английском, брать в отпуск лишние провода и устанавливать лишние приложении. В трекере собрано всё, чтобы можно было следить за своим здоровьем. И не только за своим! Вы сможете в режиме реального времени смотреть пульс близких или соревноваться с друзьями в количестве пройденных шагов. 
+<br>
+<br>Теперь можно будет узнавать «своих» в любой точке мира по запястью. 😎<br></p>
                     </div>
                 </div>
             </div>
@@ -196,9 +213,8 @@
                         <h4 class="card-title mbr-fonts-style display-5">MBM набор "Multi", в состав которого входит вся продукция, Умный Фитнес Трекер и Бутылка AGenYZ&nbsp;</h4>
                         <p class="mbr-text mbr-fonts-style display-7"><strong>Состав набора MBM SET "Multi":</strong>
 <br> 
-<br>Бутылка AGenYZ
-<br>Умный Трекер AGenYZ
-<br>pH Баланс Селл
+<br>Бутылка AGenYZ <strong>(в подарок)</strong><br>Умный Трекер AGenYZ
+<strong>(в подарок)</strong><br>pH Баланс Селл
 <br>СорбиоДетокс Селл
 <br>Иммун Селл
 <br>СеллГенетикс
@@ -208,7 +224,7 @@
 <br>СлимХит
 <br>Альфа Шейк (2 шт)
 <br>Альфа Микс (2 шт)
-<br>Фирменный пакет</p>
+<br>Фирменный пакет<br><br><strong>Стоимость набора 27 500 руб.</strong><br><br><br><strong><br></strong><br></p>
                     </div>
                 </div>
             </div>
