--- a/маркетинг-план.html
+++ b/маркетинг-план.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
 
     
 
